deployment/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: caffeine-staging
spec:
  selector:
    matchLabels:
      app: caffeine
      env: staging
  replicas: 1
  template:
    metadata:
      labels:
        app: caffeine
        env: staging
    spec:
      containers:
      - name: web
        image: gcr.io/dd-decaf-cfbf6/caffeine:devel
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "10m"
          limits:
            cpu: "2000m"
